--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,7 +1,7 @@
-FROM jenkins/jenkins:alpine
+FROM jenkins/jenkins:2.350-jdk11
 MAINTAINER   djimenez <david.jimenez19@gmail.com>
 ENV JENKINS_USER admin
-#ENV JENKINS_PASS admin
+ENV JENKINS_PASS admin
 
 # Skip initial setup
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
@@ -9,7 +9,5 @@ ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 COPY plugins.txt /usr/share/jenkins/plugins.txt
 RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/plugins.txt
 USER root
-RUN apk add docker
-RUN apk add py-pip
 
 USER jenkins
