--- a/jenkins/values.yml
+++ b/jenkins/values.yml
@@ -18,6 +18,8 @@ renderHelmLabels: true
 controller:
   # Used for label app.kubernetes.io/component
   componentName: "jenkins-controller"
+#  image: "djimenezc/jenkins-custom"
+#  tag: "1.0.0"
   image: "jenkins/jenkins"
   tag: "2.350-jdk11"
   tagLabel: jdk11
@@ -239,10 +241,67 @@ controller:
 
   # List of plugins to be install during Jenkins controller start
   installPlugins:
-    - kubernetes:1.31.3
-    - workflow-aggregator:2.6
-    - git:4.10.2
-    - configuration-as-code:1414.v878271fc496f
+    - command-launcher:84.v4a_97f2027398
+    - matrix-auth:3.1.2
+    - jdk-tool:1.5
+    - sshd:3.237.v883d165a_c1d3
+    - kubernetes:3600.v144b_cd192ca_a_
+    - workflow-aggregator:581.v0c46fa_697ffd
+    - git:4.11.3
+    - configuration-as-code:1429.v09b_044a_c93de
+    - github:1.34.3
+    - ws-cleanup:0.42
+    - warnings-ng:9.12.0
+    - view-job-filters:2.3
+    - timestamper:1.17
+    - throttle-concurrents:2.8
+    - theme-manager:1.4
+    - testng-plugin:554.va4a552116332
+    - swarm:3.32
+    - ssh-slaves:1.814.vc82988f54b_10
+    - ssh-agent:295.v9ca_a_1c7cc3a_a_
+    - sse-gateway:1.25
+    - solarized-theme:0.1
+    - sloccount:1.25
+    - slave-setup:1.10
+    - simple-theme-plugin:103.va_161d09c38c7
+    - show-build-parameters:1.0
+    - run-condition:1.5
+    - role-strategy:488.v0634ce149b_8c
+    - prometheus:2.0.11
+    - project-stats-plugin:0.4
+    - project-description-setter:1.2
+    - progress-bar-column-plugin:1.0
+    - pipeline-github:2.8-138.d766e30bb08b
+    - performance:3.20
+    - pegdown-formatter:1.3
+    - parameterized-trigger:2.44
+    - next-build-number:1.8
+    - monitoring:1.91.0
+    - material-theme:0.4.1
+    - mapdb-api:1.0.9.0
+    - jira:3.7.1
+    - image-gallery:2.0.2
+    - greenballs:1.15.1
+    - ec2:1.68
+    - dark-theme:185.v276b_5a_8966a_e
+    - console-column-plugin:131.vcf0ddb_8858c3  #-- unneeded ?
+    - compact-columns:1.134.v16d8dcc449c5
+    - code-coverage-api:2.0.4
+    - cobertura:1.17
+    - cloudbees-disk-usage-simple:0.10 #-- unneeded ?
+    - built-on-column:1.1 #-- unneeded ?
+    - buildtriggerbadge:251.vdf6ef853f3f5
+    - build-name-setter:2.2.0
+    - build-monitor-plugin:1.13+build.202205140447
+    - build-blocker-plugin:1.7.8
+    - aws-secrets-manager-secret-source:0.0.2
+    - aws-secrets-manager-credentials-provider:1.1.0
+    - atlassian-jira-software-cloud:2.0.2
+    - antisamy-markup-formatter:2.7
+    - ansicolor:1.0.1
+    - PrioritySorter:4.1.0
+    - Office-365-Connector:4.17.0
 
   # Set to false to download the minimum required version of all dependencies.
   installLatestPlugins: true
