--- a/ansible/configure_security_scanner.yml
+++ b/ansible/configure_security_scanner.yml
@@ -15,6 +15,7 @@
         - docker
         - jq
         - telnet
+        - tmux
     - name: Start service docker if not started
       service:
         name: docker
