create target to provision terraform backend

--- a/ansible/configure_security_scanner.yml
+++ b/ansible/configure_security_scanner.yml
@@ -16,6 +16,10 @@
         - jq
         - telnet
         - tmux
+        - openssl-devel
+        - perl
+        - perl-Net-SSLeay
+        - perl-Crypt-SSLeay
     - name: Start service docker if not started
       service:
         name: docker
