--- a/Makefile.aws
+++ b/Makefile.aws
@@ -7,6 +7,9 @@ INSTANCE_TYPE ?= t3.medium
 ROLE_NAME ?= security-scanner-ec2
 KEY_PAIR ?= david-key
 INSTANCE_NAME ?= david_security_scanner
+TMUX_SESSION_NAME ?= $(INSTANCE_NAME)
+TERRAFORM_BUCKET_NAME ?= david-terraform-remote-state-${AWS_DEFAULT_REGION}
+TERRAFORM_LOCK_TABLE_NAME ?= terraform-locks
 
 INSTANCE_ID ?= $(shell aws ec2 describe-instances --filters 'Name=tag:Name,Values=$(INSTANCE_NAME)' 'Name=instance-state-name,Values=running,stopped' --query 'Reservations[*].Instances[*].[InstanceId]' --output text)
 
@@ -18,7 +21,10 @@ aws-ec2-describe-instances:
  	--filters 'Name=instance-state-name,Values=running,stopped,stopping'  --output table
 
 aws-ec2-launch:
-	aws ec2 run-instances --image-id $(AMI_ID) --count 1 --instance-type $(INSTANCE_TYPE) --key-name $(KEY_PAIR) --security-group-ids $(AWS_SG) --subnet-id $(AWS_SUBNET_ID) --iam-instance-profile Name="$(ROLE_NAME)"	--tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=$(INSTANCE_NAME)}]'
+	aws ec2 run-instances --image-id $(AMI_ID) --count 1 --instance-type $(INSTANCE_TYPE) --key-name $(KEY_PAIR) \
+ 	--security-group-ids $(AWS_SG) --subnet-id $(AWS_SUBNET_ID) --iam-instance-profile Name="$(ROLE_NAME)" \
+	--tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=$(INSTANCE_NAME)}]' \
+	--block-device-mapping "[ { \"DeviceName\": \"/dev/xvda\", \"Ebs\": { \"VolumeSize\": 60 } } ]"
 
 aws-ec2-get-ids:
 	@echo $(INSTANCE_ID)
@@ -42,7 +48,30 @@ aws-ssh-connect:
 	ssh ec2-user@$(INSTANCE_ID) -i ~/.ssh/$(KEY_PAIR).pem
 
 aws-ssh-connect-tmux:
-	ssh ec2-user@$(INSTANCE_ID) -i ~/.ssh/$(KEY_PAIR).pem -t "tmux new-session -s $(INSTANCE_NAME) || tmux attach-session -t $(INSTANCE_NAME)"
+	ssh ec2-user@$(INSTANCE_ID) -i ~/.ssh/$(KEY_PAIR).pem -t "tmux new-session -s $(TMUX_SESSION_NAME) || tmux attach-session -t $(TMUX_SESSION_NAME)"
+
+#Terraform
+aws-terraform-create-s3-backend:
+	@if aws s3 ls "s3://$(TERRAFORM_BUCKET_NAME)" 2>&1 | grep -q 'NoSuchBucket'; then \
+  		echo "Creating bucket $(TERRAFORM_BUCKET_NAME)"; \
+		aws s3api create-bucket --bucket $(TERRAFORM_BUCKET_NAME) --region ${AWS_DEFAULT_REGION} \
+			--create-bucket-configuration LocationConstraint=${AWS_DEFAULT_REGION}; \
+		aws s3api put-bucket-encryption --bucket $(TERRAFORM_BUCKET_NAME) \
+			--server-side-encryption-configuration \
+			'{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'; \
+		aws s3api put-public-access-block \
+            --bucket $(TERRAFORM_BUCKET_NAME) \
+            --public-access-block-configuration \
+            'BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true'; \
+		aws s3api get-public-access-block --bucket $(TERRAFORM_BUCKET_NAME); \
+	fi
+	-aws dynamodb create-table --table-name $(TERRAFORM_LOCK_TABLE_NAME) \
+	--attribute-definitions AttributeName=LockID,AttributeType=S --key-schema AttributeName=LockID,KeyType=HASH \
+	 --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5
+
+aws-terraform-create-s3-backend-rollback:
+	aws s3api delete-bucket --bucket $(TERRAFORM_BUCKET_NAME)
+	aws dynamodb delete-table --table-name $(TERRAFORM_LOCK_TABLE_NAME)
 
 #IAM
 aws-iam-role-create:
@@ -51,6 +80,9 @@ aws-iam-role-create:
 	${MAKE} aws-iam-role-show-attached-policy
 	aws iam create-instance-profile --instance-profile-name $(ROLE_NAME)
 	aws iam add-role-to-instance-profile --instance-profile-name $(ROLE_NAME) --role-name $(ROLE_NAME)
+
+#aws-iam-role-create-ec2-start-stop:
+#	aws iam create-role --role-name ec2-start-stop --assume-role-policy-document file://aws/ec2-start-stop-policy.json
 
 aws-iam-associate-instance-profile:
 	aws ec2 associate-iam-instance-profile --iam-instance-profile Name=$(ROLE_NAME) --instance-id $(INSTANCE_ID)
