--- a/Makefile.aws
+++ b/Makefile.aws
@@ -24,6 +24,7 @@ aws-ec2-launch:
 	aws ec2 run-instances --image-id $(AMI_ID) --count 1 --instance-type $(INSTANCE_TYPE) --key-name $(KEY_PAIR) \
  	--security-group-ids $(AWS_SG) --subnet-id $(AWS_SUBNET_ID) --iam-instance-profile Name="$(ROLE_NAME)" \
 	--tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=$(INSTANCE_NAME)}]' \
+	--hibernation-options Configured=true \
 	--block-device-mapping "[ { \"DeviceName\": \"/dev/xvda\", \"Ebs\": { \"VolumeSize\": 60 } } ]"
 
 aws-ec2-get-ids:
