--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
     branches: [ master, main ]
   workflow_dispatch:
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -33,8 +36,6 @@ jobs:
             [
               'master'
             ]
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: Do something when a new release published
         if: steps.semantic.outputs.new_release_published == 'true'
         run: |
