--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,8 @@
 {
-  "ci": false,
+  "ci": true,
   "branches": [
-    "master"
+    "master",
+    "main"
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
