--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
     branches: [ master, main ]
   workflow_dispatch:
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -20,10 +23,32 @@ jobs:
       options: --cpus 1
     steps:
       - uses: actions/checkout@v2
+
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - if: ${{ steps.cache-npm.outputs.cache-hit == 'false' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: npm list
+
       - name: Disable git hooks
         run: npm set-script prepare ''
       - name: NPM Install
         run: npm install
+      - name: Re-enable git hooks
+        run: npm set-script prepare 'husky install'
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
@@ -31,10 +56,10 @@ jobs:
           semantic_version: 16
           branches: |
             [
-              'master'
+              'master',
+              'main'
             ]
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
       - name: Do something when a new release published
         if: steps.semantic.outputs.new_release_published == 'true'
         run: |
